<resources>
    <string name="app_name">VeronnWallet</string>

    <string name="nav_content_description_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="nav_content_description_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="start_anonym">Start as anonymous</string>
    <string name="start_autonym">Start with a real name</string>
    <string name="join">Join</string>

    <string name="name">Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="isc_type">Type of industrial standard code</string>
    <string name="isc_code">Industrial standard ode</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>

    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
    <string name="invalid_birth_date">Invalid Birth Date</string>
    <string name="invalid_port">Invalid Port</string>
    <string name="invalid_password">Use at least 14 characters</string>

    <string name="validation_error_occurred">Input error occurred</string>
    <string name="validation_err_required">Required</string>
    <string name="validation_err_number_only">Input only number</string>
    <string name="validation_err_ip">Invalid IP Address</string>
    <string name="validation_err_minimum">Use at least %d characters</string>
    <string name="validation_err_not_matched">It must be same with previous input</string>

    <string name="nav_item_merger">Merger Setup</string>
    <string name="nav_item_home">Home</string>
    <string name="ip_address">IP address</string>
    <string name="port_number">Port Number</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="retype_password">Retype Password</string>
</resources>
