<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.veronnnetworks.veronnwallet.ui.common.databinding.InputRule" />
        <variable
            name="userInfo"
            type="com.veronnnetworks.veronnwallet.model.UserInfo" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_layout"
                style="@style/AppTheme.TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:setRule="@{userInfo.nameValidator}"
                app:errorText="@{@string/invalid_name}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={userInfo.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_birth_layout"
                style="@style/AppTheme.TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:setRule="@{userInfo.birthDateValidator}"
                app:errorText="@{@string/invalid_birth_date}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={userInfo.birthDate}"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_mobile_layout"
                style="@style/AppTheme.TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:setRule="@{userInfo.mobileValidator}"
                app:errorText="@{@string/invalid_mobile}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@={userInfo.mobile}"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/user_sex_male"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_flat_selector"
                    android:padding="16dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/user_sex_female"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_flat_selector"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/user_sex_others"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:button="@android:color/transparent"
                    android:background="@drawable/radio_flat_selector"
                    android:text="@string/others" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_isc_type_layout"
                style="@style/AppTheme.TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_isc_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/isc_type"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_isc_code_layout"
                style="@style/AppTheme.TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_isc_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/isc_code" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_location_layout"
                style="@style/AppTheme.TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</layout>