<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.merger.MergerFragment">

    <data>

        <variable
            name="ipAddress"
            type="String" />

        <variable
            name="portNumber"
            type="String" />

        <variable
            name="password"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout
                    android:id="@+id/merger_ip_layout"
                    style="@style/AppTheme.TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:trigger="focus_changed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/merger_ip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:hint="@string/ip_address"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={ipAddress}" />
                </com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout>


                <com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout
                    android:id="@+id/merger_port_layout"
                    style="@style/AppTheme.TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:trigger="focus_changed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/merger_port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:hint="@string/port_number"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={portNumber}" />
                </com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout>

                <com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout
                    android:id="@+id/merger_password_layout"
                    style="@style/AppTheme.TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:counterEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:trigger="focus_changed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/merger_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="14"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={password}" />
                </com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout>

                <com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout
                    android:id="@+id/merger_password_check_layout"
                    style="@style/AppTheme.TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:counterEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:trigger="focus_changed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/merger_password_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="14"
                        android:hint="@string/retype_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.veronnnetworks.veronnwallet.ui.common.view.ValidatableTextInputLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/ok"
            style="@style/AppTheme.RoundedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/AppTheme.ProgressBar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>